# microbit-spectrum

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs  saadc.rs  serial.rs
