[package]
name = "spectrum"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
nb = "1.1.0"
defmt = "1.0.1"
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
microbit-v2 = "0.16.0"
embedded-io = "0.7.1"
rtt-target = "0.6.2"

[dependencies.ordered-float]
version = "5.1.0"
default-features = false

[dependencies.panic-rtt-target]
version = "0.2.0"
optional = true

[dependencies.panic-halt]
version = "1.0.0"
optional = true

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.num-complex]
version = "0.4.6"
default-features = false
features = ["libm"]

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]

[dependencies.microfft]
version = "0.6.0"
default-features = false
features = ["size-64"]

[features]

default = ["adc-multiread", "dep:panic-rtt-target"]

adc-multiread = []
trace = []
panic-halt = ["dep:panic-halt"]
deep-sleep = []
